microservices/observibility/servicemesh-networkingpolicies/network-policies/servicetodb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-egress
  namespace: ecommerce
  labels:
    app.kubernetes.io/part-of: ecommerce-network-policy
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - product-service
          - user-service
          - order-service
          - payment-service
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchExpressions:
              - key: cnpg.io/cluster
                operator: Exists
      ports:
        - protocol: TCP
          port: 5432
